fix:template enabled switcher invisible when turned off

--- a/Frontend/src/app/modules/management-dialogs/node-template/node-template.component.scss
+++ b/Frontend/src/app/modules/management-dialogs/node-template/node-template.component.scss
@@ -4,13 +4,8 @@
   overflow: hidden;
 }
 
-.template-disabled{
+.template-disabled {
   background: rgba(255, 255, 255, 1);
-  height: calc(100% - 30px);
-  position: absolute;
-  top: 0;
-  left: 0;
-
   .disabled-info{
     padding: 20% 10%;
     text-align: center;
